--- a/blog/project1/hw1_questions (4).qmd
+++ b/blog/project1/hw1_questions (4).qmd
@@ -38,6 +38,23 @@ from scipy import stats
 data = pd.read_stata("/Users/hanhuazhu/Downloads/karlan_list_2007 (2).dta")
 ```
 
+## Description
+
+The dataset includes 50,083 observations, each representing a past donor who received a fundraising letter as part of a large-scale randomized field experiment. The dataset captures a wide range of information, including treatment assignments, donation outcomes, prior giving behavior, and demographic context.
+
+There are 51 variables in total, which can be broadly grouped into the following categories:
+- **Treatment indicators**: such as `treatment`, `ratio2`, `ratio3`, `size25`, `size50`, `size100`, and `askd1`, which reflect match ratios, thresholds, and suggested donation amounts.
+- **Outcome variables**: including `gave` (binary indicator for donation) and `amount` (dollar amount donated).
+- **Historical giving behavior**: such as `hpa` (highest previous amount), `ltmedmra` (indicator for low prior donors), and `years` since the first donation.
+- **Demographic and contextual features**: such as `female`, `couple`, `median_hhincome`, `page18_39`, `pwhite`, and `pop_propurban`.
+
+Most variables are either complete or have minimal missingness, and the data types are a mix of binary indicators, integers, floats, and categorical values. This structure makes the dataset well-suited for regression, simulation, and visualization tasks.
+
+Summary statistics show that approximately **66.7% of observations are in the treatment group**, with **33.3% in the control group**, as expected from random assignment. The `gave` variable indicates that about **2.06% of individuals donated**, and the average donation (`amount`) across the full sample is **$0.92**, with some contributions reaching as high as **$400**. This reflects the typical skew in donation behavior: most individuals gave nothing, while a few gave large amounts.
+
+The match ratio flags (`ratio2`, `ratio3`) suggest roughly **equal allocation** across the 1:1, 2:1, and 3:1 groups. Likewise, the match threshold indicators (`size25`, `size50`, `size100`, `sizeno`) are each present in about **16.7%** of the sample. Suggested donation framing variables (`askd1`, `askd2`, `askd3`) also appear to be evenly distributed, reinforcing that the experimental design was properly randomized.
+
+The table below provides descriptions for key variables in the dataset.
 
 
 #:::: {.callout-note collapse="true"}
@@ -494,6 +511,13 @@ To illustrate the Law of Large Numbers, I simulate two groups: one representing 
 
 To illustrate the Law of Large Numbers, I simulate two groups: one representing respondents who did not receive a matching donation offer (control, with donation probability \( p = 0.018 \)), and one representing those who did (treatment, with \( p = 0.022 \)). I draw 10,000 samples from each group and compute the difference for each pair. Then, I calculate and plot the **cumulative average** of these differences.
 
+### Law of Large Numbers
+
+To simulate the Law of Large Numbers, I compare paired random samples from two Bernoulli distributions: one for the control group (\( p = 0.018 \)) and one for the treatment group (\( p = 0.022 \)). I compute the difference in outcomes for each pair and plot the cumulative average to see whether it converges to the true mean difference of 0.004.
+
+### Law of Large Numbers: Convergence of Mean Difference
+
+
 ```{python}
 #| echo: false
 #| warning: false
@@ -502,32 +526,39 @@ To illustrate the Law of Large Numbers, I simulate two groups: one representing 
 import numpy as np
 import matplotlib.pyplot as plt
 
+plt.style.use("classic")
 np.random.seed(42)
 
-# Simulate control group as large population
-control_pop = np.random.binomial(1, 0.018, 100_000)
+n_obs = 6500
+sample_size = 50
 
-# Simulate 10,000 paired draws
-control_sample = np.random.choice(control_pop, size=10_000, replace=True)
-treatment_sample = np.random.binomial(1, 0.022, 10_000)
-
-# Compute vector of differences
-diffs = treatment_sample - control_sample
-
-# Cumulative average
-cum_avg = np.cumsum(diffs) / np.arange(1, len(diffs) + 1)
+# Simulate cumulative difference in sample means
+diffs = [
+    np.random.binomial(1, 0.022, sample_size).mean() - 
+    np.random.binomial(1, 0.018, sample_size).mean()
+    for _ in range(n_obs)
+]
+cum_avg = np.cumsum(diffs) / np.arange(1, n_obs + 1)
 
 # Plot
 plt.figure(figsize=(10, 5))
-plt.plot(cum_avg, label="Cumulative Avg. Difference", color='darkorange')
-plt.axhline(y=0.004, color='red', linestyle='--', label="True Mean Difference (0.004)")
-plt.title("Law of Large Numbers Simulation")
-plt.xlabel("Number of Observations")
-plt.ylabel("Cumulative Average Difference")
+plt.plot(cum_avg, color='blue', linewidth=2.5, label="Cumulative Avg. Difference")
+plt.axhline(y=0.004, color='red', linestyle='--', linewidth=2, label="True Mean Difference (0.004)")
+plt.title("Law of Large Numbers: Convergence of Mean Difference", fontsize=13)
+plt.xlabel("Number of Observations", fontsize=12)
+plt.ylabel("Cumulative Difference (Treatment - Control)", fontsize=12)
+plt.xlim(0, n_obs)
+plt.ylim(0, 0.04)
+plt.yticks(np.arange(0, 0.045, 0.005))
+plt.gca().set_yticklabels([f"{tick:.3f}" for tick in np.arange(0, 0.045, 0.005)])  # <- fixes label format
 plt.legend()
 plt.grid(True)
 plt.show()
 ```
+
+
+
+
 
 As shown in the plot above, the cumulative average of the differences fluctuates at first but gradually stabilizes around the true expected difference of **0.004**. This pattern exemplifies the **Law of Large Numbers**, which states that as the number of observations increases, the sample average converges to the population mean.
 
