--- a/blog/project2/hw2_questions.qmd
+++ b/blog/project2/hw2_questions.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Poisson Regression Examples"
 author: "Hanhua Zhu"
-date: today
+date:  May 7th, 2025
 callout-appearance: minimal # this hides the blue "i" icon on .callout-notes
 ---
 
