--- a/blog/project1/hw1_questions (4).qmd
+++ b/blog/project1/hw1_questions (4).qmd
@@ -57,7 +57,7 @@ The match ratio flags (`ratio2`, `ratio3`) suggest roughly **equal allocation** 
 The table below provides descriptions for key variables in the dataset.
 
 
-#:::: {.callout-note collapse="true"}
+:::: {.callout-note collapse="true"}
 
 
 ##| Variable             | Description                                                         |
